crates/pack/tests/compile_fail/fact_new_without_feature.stderr
error[E0599]: no associated function or constant named `construct` found for struct `ContextFact` in the current scope
 --> tests/compile_fail/fact_new_without_feature.rs:9:30
  |
9 |     let _fact = ContextFact::construct(ContextKey::Seeds, "test-id", "test-content");
  |                              ^^^^^^^^^ associated function or constant not found in `ContextFact`
  |
note: if you're trying to build a new `ContextFact` consider using one of the following associated functions:
      ContextFact::new_projection
      ContextFact::from_wire
 --> src/fact.rs
  |
  | /     pub fn new_projection<T>(
  | |         key: ContextKey,
  | |         id: impl Into<FactId>,
  | |         payload: T,
... |
  | |     where
  | |         T: FactPayload + PartialEq,
  | |___________________________________^
...
  | /     pub fn from_wire(
  | |         wire: WireContextFact,
  | |         registry: &PayloadRegistry,
  | |     ) -> Result<Self, PayloadError> {
  | |___________________________________^
